; ModuleID = '/home/carl/AnghaBench/libgit2/tests/network/remote/extr_remotes.c_test_network_remote_remotes__tagopt.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/network/remote/extr_remotes.c_test_network_remote_remotes__tagopt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_remote = common dso_local global i32 0, align 4
@_repo = common dso_local global i32 0, align 4
@GIT_REMOTE_DOWNLOAD_TAGS_ALL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"remote.test.tagopt\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"--tags\00", align 1
@GIT_REMOTE_DOWNLOAD_TAGS_NONE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [10 x i8] c"--no-tags\00", align 1
@GIT_REMOTE_DOWNLOAD_TAGS_AUTO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_network_remote_remotes__tagopt() #0 {
  %1 = alloca i8*, align 8
  %2 = load i32, i32* @_remote, align 4
  %3 = call i8* @git_remote_name(i32 %2)
  store i8* %3, i8** %1, align 8
  %4 = load i32, i32* @_repo, align 4
  %5 = load i8*, i8** %1, align 8
  %6 = load i32, i32* @GIT_REMOTE_DOWNLOAD_TAGS_ALL, align 4
  %7 = call i32 @git_remote_set_autotag(i32 %4, i8* %5, i32 %6)
  %8 = load i32, i32* @_repo, align 4
  %9 = call i32 @assert_config_entry_value(i32 %8, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %10 = load i32, i32* @_repo, align 4
  %11 = load i8*, i8** %1, align 8
  %12 = load i32, i32* @GIT_REMOTE_DOWNLOAD_TAGS_NONE, align 4
  %13 = call i32 @git_remote_set_autotag(i32 %10, i8* %11, i32 %12)
  %14 = load i32, i32* @_repo, align 4
  %15 = call i32 @assert_config_entry_value(i32 %14, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %16 = load i32, i32* @_repo, align 4
  %17 = load i8*, i8** %1, align 8
  %18 = load i32, i32* @GIT_REMOTE_DOWNLOAD_TAGS_AUTO, align 4
  %19 = call i32 @git_remote_set_autotag(i32 %16, i8* %17, i32 %18)
  %20 = load i32, i32* @_repo, align 4
  %21 = call i32 @assert_config_entry_existence(i32 %20, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 0)
  ret void
}

declare dso_local i8* @git_remote_name(i32) #1

declare dso_local i32 @git_remote_set_autotag(i32, i8*, i32) #1

declare dso_local i32 @assert_config_entry_value(i32, i8*, i8*) #1

declare dso_local i32 @assert_config_entry_existence(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
